--- a/disable_odoo_online/views/ir_ui_menu.xml
+++ b/disable_odoo_online/views/ir_ui_menu.xml
@@ -9,4 +9,20 @@
         <field name="parent_id" ref="base.menu_ir_property"/>
     </record>
 
+    <record model="ir.ui.menu" id="base.menu_theme_store">
+        <field name="parent_id" ref="base.menu_ir_property"/>
+    </record>
+
+    <record model="ir.ui.menu" id="base.menu_third_party">
+        <field name="parent_id" ref="base.menu_ir_property"/>
+    </record>
+
+    <record model="ir.ui.menu" id="base.menu_module_tree">
+        <field name="parent_id" ref="base.menu_ir_property"/>
+    </record>
+
+    <record model="ir.ui.menu" id="base.menu_apps">
+        <field name="action" ref="base.open_module_tree"/>
+    </record>
+
 </odoo>
