--- a/hr_expense_remove_mobile_link/views/hr_expense.xml
+++ b/hr_expense_remove_mobile_link/views/hr_expense.xml
@@ -2,14 +2,13 @@
 <odoo>
 
     <record id="hr_expense.hr_expense_actions_my_all" model="ir.actions.act_window">
-        <field name="help" />
-    </record>
-
-    <record
-        id="hr_expense.hr_expense_actions_my_unsubmitted"
-        model="ir.actions.act_window"
-    >
-        <field name="help" />
+        <field name="help" type="html">
+            <p class="o_view_nocontent_expense_receipt">
+                <h2 class="d-none d-md-block">
+                    Drag and drop files to create expenses
+                </h2>
+            </p>
+        </field>
     </record>
 
 </odoo>
