[MIG] portal_odoo_debranding: Migration to 17.0

--- a/portal_odoo_debranding/views/portal_templates.xml
+++ b/portal_odoo_debranding/views/portal_templates.xml
@@ -11,7 +11,7 @@
         id="portal_record_sidebar_debrand"
         inherit_id="portal.portal_record_sidebar"
     >
-        <xpath expr="//div[hasclass('card-footer')]" position="attributes">
+        <xpath expr="//div[hasclass('d-none')]" position="attributes">
             <attribute name="t-if">False</attribute>
         </xpath>
     </template>
